package es.ull.shapes;

import javax.swing.*;
import java.awt.*;

public class MyPanel extends JPanel {

    public MyPanel() {
        setBackground(Color.WHITE);
    }
}
